# Hueduino

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Bridge.h  BridgeCapabilities.cpp  BridgeGroupStream.cpp  BridgeImpl.cpp  BridgeSceneStream.cpp  Group.h  GroupActionStrBuilder.cpp  GroupImpl.cpp  Light.cpp  Light.h  Scene.cpp  Scene.h
src/Internals/: HueUtils.cpp  HueUtils.h  TimedStreamWrapper.h  Types.h  WiFiClientWrapper.h
test/: CMakeLists.txt  TestGroup.cpp  TestGroupStream.cpp  TestScene.cpp  TestSceneStream.cpp  tests-main.cpp  toString.hpp
